--- a/public_html/media/css/user/suggestions.css
+++ b/public_html/media/css/user/suggestions.css
@@ -51,3 +51,36 @@
 	position: absolute;
 	right: 4px;
 }
+
+
+.original img {
+	width: 80px;
+	margin-right: 0.5em;
+	float: left;
+}
+.original .details {
+	float: left;
+	width: 210px;
+	white-space: pre;
+	line-height: 133%;
+	overflow: hidden;
+}
+.original .details div {
+	font-size: 87.5%;
+	overflow: hidden;
+	text-overflow: ellipsis;
+}
+.original .season {
+	color: gray;
+}
+
+.original ul {
+	margin: 0;
+	padding: 0;
+}
+.original li {
+	padding: 0;
+	margin: 0 0 1em 0;
+	vertical-align: top;
+	display: inline-block;
+}
