--- a/src/Views/user-suggestions-new.phtml
+++ b/src/Views/user-suggestions-new.phtml
@@ -1,7 +1,9 @@
 <div class="section original">
 	<h2>Recommendations</h2>
 	<div class="section-body">
-		<?php if (empty($viewContext->newRecommendations)): ?>
+		<?php if ($viewContext->private): ?>
+			<p>Since <?php echo $viewContext->user->name ?>&rsquo;s <?php echo Media::toString($viewContext->media) ?> list is marked as private, we can&rsquo;t reveal its contents by showing suggestions. If this is your list, click <a target="_blank" href="http://myanimelist.net/editprofile.php?go=listpreferences">here</a> to change privacy settings.</p>
+		<?php elseif (empty($viewContext->newRecommendations)): ?>
 			<p>Sorry, no new recommendations. Hey, this shouldn&rsquo;t have happened!</p>
 		<?php else: ?>
 			<ul>
