--- a/src/Views/user-favorites-decades.phtml
+++ b/src/Views/user-favorites-decades.phtml
@@ -3,11 +3,12 @@
 		Favorite years
 	</h2>
 	<div class="section-body">
-
 		<?php if ($viewContext->favYears->getLargestGroupSize() == 0): ?>
 			<p>There is no information about any completion dates for this user.</p>
 			<p>Add a few titles and come back in 24 hours.<br>We'll be waiting for you.</p>
 		<?php else: ?>
+			<p class="toggle-decades-msg"><a href="#">Toggle decades/years visibility</a></p>
+
 			<div class="target-wrapper">
 				<div class="target"></div>
 				<div class="clear"></div>
@@ -35,7 +36,7 @@
 						},
 						title:
 						{
-							text: 'Decades',
+							text: 'Years and decades',
 							margin: 15
 						},
 						<?php $json = [];
@@ -139,7 +140,7 @@
 					}
 				};
 
-				new Highcharts.Chart(opt);
+				var decadesChart = new Highcharts.Chart(opt);
 			</script>
 		<?php endif ?>
 	</div>
