Recommendations changed to recommendation-based

--- a/src/Views/user-suggestions-new.phtml
+++ b/src/Views/user-suggestions-new.phtml
@@ -45,6 +45,8 @@
 							<div class="season details">
 								<?php echo ucfirst($entry->getSeason()) ?>
 							</div>
+
+							<!--<?php printf('%.02f', $entry->hypothetical_score) ?>-->
 						</div>
 
 						<div class="clear"></div>
