--- a/src/Views/user-suggestions-new.phtml
+++ b/src/Views/user-suggestions-new.phtml
@@ -14,7 +14,7 @@
 						</a>
 
 						<div class="details-wrapper">
-							<div>
+							<div class="header">
 								<a target="_blank" href="<?php echo $entry->mal_link ?>" title="<?php echo htmlspecialchars($entry->title) ?>">
 									<?php echo htmlspecialchars($entry->title) ?>
 								</a>
