Fixed pasting text into textarea

--- a/src/Views/admin-index.phtml
+++ b/src/Views/admin-index.phtml
@@ -91,7 +91,7 @@
 						ids.push(symb);
 					}
 				}
-				$('input[name=\'model-id\']').val(ids.join(','));
+				$('input[name=\'model-ids\']').val(ids.join(','));
 				timeout = null;
 			}, 100);
 		}
