--- a/src/Views/admin-index.phtml
+++ b/src/Views/admin-index.phtml
@@ -59,6 +59,7 @@
 		<div class="control-group">
 			<div>
 				<button class="btn btn-success" type="submit" name="action" value="refresh">Refresh</button>
+				<button class="btn btn-success" type="submit" name="action" value="toggle-block">Toggle block</button>
 			</div>
 		</div>
 	</fieldset>
